<?xml version="1.0"?>
<package>
  <name>sensors</name>
  <version>0.0.0</version>
  <description>Sensors to be used on simulated robots in Gazebo</description>

  <maintainer email="sebastian.kasperski@dfki.de">Sebastian Kasperski</maintainer>
  <license>GPLv3</license>
  <url type="website">http://wiki.ros.org/gazebo_robots</url>
  <url type="repository">https://github.com/skasperski/gazebo_robots.git</url>
  <url type="bugtracker">https://github.com/skasperski/gazebo_robots/issues</url>
  <author email="sebastian.kasperski@dfki.de">Sebastian Kasperski</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
